# libmrf

./: .gitignore  Makefile  Makefile.am  Makefile.in  autoclean.sh  clean  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool  mrf.pc.in
autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2  traces.3
lib/: Makefile  Makefile.am  Makefile.in
lib/mrf/: mrf.c  sam.c  sam.h
mrf/: mrf.c  mrf.h  mrfUtil.c  mrfUtil.h  sam.c  sam.h  segmentationUtil.c  segmentationUtil.h
